# ai-search

Cache/hosted-hashes/pub.dev/: _discoveryapis_commons-1.0.6.sha256  _fe_analyzer_shared-65.0.0.sha256  analyzer-6.3.0.sha256  app_links-2.2.0.sha256  app_links-3.4.5.sha256  app_links-3.5.1.sha256  app_links_platform_interface-0.1.0.sha256  app_links_web-0.1.0.sha256  archive-3.4.10.sha256  archive-3.4.9.sha256  audio_service-0.18.12.sha256  audio_service-0.18.2.sha256  audio_service_platform_interface-0.1.0.sha256  audio_service_platform_interface-0.1.1.sha256  audio_service_web-0.1.1.sha256  audio_session-0.1.18.sha256  audio_session-0.1.6+1.sha256  audiotagger-2.2.1.sha256  build_cli_annotations-2.1.0.sha256  built_value-8.8.1.sha256  cached_network_image-3.2.0.sha256  cached_network_image-3.3.0.sha256  cached_network_image-3.3.1.sha256  cached_network_image_platform_interface-1.0.0.sha256  cached_network_image_platform_interface-3.0.0.sha256  cached_network_image_platform_interface-4.0.0.sha256  cached_network_image_web-1.0.1.sha256  cached_network_image_web-1.1.0.sha256  cached_network_image_web-1.1.1.sha256  carousel_slider-4.2.1.sha256  cli_config-0.1.2.sha256  cli_util-0.4.0.sha256  cli_util-0.4.1.sha256  console-4.1.0.sha256  (+204 more)
ai-search/: CMakeLists.txt  api.py  fake.py  install.sh  log  main.cpp  prepare.sh
ai-search/include/: APIServer.h  JsonFileGenerator.h  MusicDatabase.h  MySQLConnector.h
ai-search/src/: APIServer.cpp  JsonFileGenerator.cpp  MusicDatabase.cpp  MySQLConnector.cpp
ai-search/upload/static/: 1714638455778.json  1714638472206.json  1714639286421.json
ai-search/upload/upload/: build.gradle
ai-search/upload/upload/src/main/java/com/tck/upload/: UploadApplication.java  UploadController.java
ai-search/upload/upload/src/main/resources/: application.properties
ai-search/upload/upload/src/test/java/com/tck/upload/: UploadApplicationTests.java
ai-search/upload/upload/static/: 1714632814397.json
drop/: pubspec.yaml
drop/lib/: main.dart
(+401 files in other folders)
